--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "private": true,
   "homepage": "https://yarikgorpl.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.1.0",
+    "axios": "^1.4.0",
+    "icons": "^1.0.0",
+    "loader": "^2.1.1",
+    "react": "^18.2.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.10.1",
+    "react-loader-spinner": "^5.3.4",
+    "react-redux": "^8.1.2",
     "react-scripts": "5.0.1",
+    "spinner": "^0.3.4",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
