--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "loader": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.1.2",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "spinner": "^0.3.4",
     "web-vitals": "^2.1.3"
   },
